<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_sign_in"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/sign_in"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_example"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_example"/>
    

</menu>